# HCC

./: .dockerignore  .env.example  .example.env  .gitignore  .~lock.HCC_relevant_codes.csv#  CONTRIBUTING.md  Dockerfile  README.md  convertCSVtoDictionary.py  draft.excalidraw  langgraph.json  main.py  pipeline.py  pyproject.toml  relevantHCCcodes.py  test2.py  test3.py  test9.py
apps/hcc_extractor_app/: __init__.py  app.py
apps/hcc_extractor_app/methods/: __init__.py  extract_conditions.py  process_run.py
apps/hcc_extractor_app/schemas/: __init__.py  condition_schema.py
pn/: pn_0  pn_1
result/: output.txt
results/: pn_7_results.json
samples/: input  output
tests/framework/tools/text_processing/: progress_note_parser.py
tests/utils/: import_csv.py
tests/utils/regex/: constants.py  test_regex_utils.py
tests/workflows/: hcc_extractor.py
utils/: relevantHCCcodes.py
utils/extras/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
utils/regex/: HCC_relevant_codes.json  regex_utils.py
